06_rect/grade.txt
Grading at Wed Jul 22 11:50:44 UTC 2020
Attempting to compile rectangle.c
rectangle.c:19:8: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘struct’
 typdef struct rect {
        ^
rectangle.c:19:15: error: struct has no members [-Werror=pedantic]
 typdef struct rect {
               ^
rectangle.c:26:1: error: unknown type name ‘rectangle’
 rectangle canonicalize(rectangle r) {
 ^
rectangle.c:26:24: error: expected declaration specifiers or ‘...’ before ‘rectangle’
 rectangle canonicalize(rectangle r) {
                        ^
rectangle.c:38:1: error: unknown type name ‘rectangle’
 rectangle intersection(rectangle r1, rectangle r2) {
 ^
rectangle.c:38:24: error: expected declaration specifiers or ‘...’ before ‘rectangle’
 rectangle intersection(rectangle r1, rectangle r2) {
                        ^
rectangle.c:38:38: error: expected declaration specifiers or ‘...’ before ‘rectangle’
 rectangle intersection(rectangle r1, rectangle r2) {
                                      ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
